<?xml version="1.0" encoding="utf-8"?>

<!--suppress ALL -->
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LinearLayout">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:minHeight="?android:attr/actionBarSize"/>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_gravity="center">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- ====================== The first product ====================== -->
            <android.support.v7.widget.CardView
                android:id="@+id/card_view1"
                style="@style/CardViewStyle"
                android:layout_marginTop="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <EditText
                        android:id="@+id/editTextProduct1"
                        style="@style/EditTextDescriptionStyle"
                        android:hint="@string/editTextProduct1"
                        android:onClick="onButtonHideClick"
                        tools:ignore="OnClick" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="138dp"
                    android:orientation="horizontal"
                    android:paddingTop="50sp"
                    android:id="@+id/LinearLayout1">
                    <EditText
                        android:id="@+id/editTextPrice1"
                        style="@style/EditTextStyle"
                        android:gravity="center"
                        android:hint="@string/editTextPricePlaceholder1"/>
                    <!-- android:text="@string/_editTextDefaultPrice1" -->
                    <EditText
                        android:id="@+id/editTextWeight1"
                        style="@style/EditTextStyle"
                        android:gravity="center"
                        android:hint="@string/editTextWeightPlaceholder1" />
                    <!--android:text="@string/_editTextDefaultWeight1"-->
                    <TextView
                        style="@style/EditTextStyle"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:id="@+id/textViewPricePerKg1"
                        android:hint="@string/textViewPricePerKg1"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- ====================== The second product ====================== -->
            <android.support.v7.widget.CardView
                android:id="@+id/card_view2"
                style="@style/CardViewStyle">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <EditText
                        android:id="@+id/editTextProduct2"
                        style="@style/EditTextDescriptionStyle"
                        android:hint="@string/editTextProduct2"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="138dp"
                    android:orientation="horizontal"
                    android:paddingTop="50sp">
                    <EditText
                        android:id="@+id/editTextPrice2"
                        style="@style/EditTextStyle"
                        android:gravity="center"
                        android:hint="@string/editTextPricePlaceholder2"/>
                    <EditText
                        android:id="@+id/editTextWeight2"
                        style="@style/EditTextStyle"
                        android:gravity="center"
                        android:hint="@string/editTextWeightPlaceholder2"/>
                    <TextView
                        style="@style/EditTextStyle"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:id="@+id/textViewPricePerKg2"
                        android:hint="@string/textViewPricePerKg1"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- ====================== The third product ====================== -->
            <android.support.v7.widget.CardView
                android:id="@+id/card_view3"
                style="@style/CardViewStyle">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <EditText
                        android:id="@+id/editTextProduct3"
                        style="@style/EditTextDescriptionStyle"
                        android:hint="@string/editTextProduct3"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="138dp"
                    android:orientation="horizontal"
                    android:paddingTop="50sp">
                    <EditText
                        android:id="@+id/editTextPrice3"
                        style="@style/EditTextStyle"
                        android:gravity="center"
                        android:hint="@string/editTextPricePlaceholder3"/>
                    <EditText
                        android:id="@+id/editTextWeight3"
                        style="@style/EditTextStyle"
                        android:gravity="center"
                        android:hint="@string/editTextWeightPlaceholder3"/>
                    <TextView
                        style="@style/EditTextStyle"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:id="@+id/textViewPricePerKg3"
                        android:hint="@string/textViewPricePerKg3"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- ====================== The fourth product ====================== -->
            <android.support.v7.widget.CardView
                android:id="@+id/card_view4"
                style="@style/CardViewStyle">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <EditText
                        android:id="@+id/editTextProduct4"
                        style="@style/EditTextDescriptionStyle"
                        android:hint="@string/editTextProduct4"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="138dp"
                    android:orientation="horizontal"
                    android:paddingTop="50sp">
                    <EditText
                        android:id="@+id/editTextPrice4"
                        style="@style/EditTextStyle"
                        android:gravity="center"
                        android:hint="@string/editTextPricePlaceholder4"/>
                    <EditText
                        android:id="@+id/editTextWeight4"
                        style="@style/EditTextStyle"
                        android:gravity="center"
                        android:hint="@string/editTextWeightPlaceholder4"/>
                    <TextView
                        style="@style/EditTextStyle"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:id="@+id/textViewPricePerKg4"
                        android:hint="@string/textViewPricePerKg4"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- ====================== The fifth product ====================== -->
            <android.support.v7.widget.CardView
                android:id="@+id/card_view5"
                style="@style/CardViewStyle">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <EditText
                        android:id="@+id/editTextProduct5"
                        style="@style/EditTextDescriptionStyle"
                        android:hint="@string/editTextProduct5"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="138dp"
                    android:orientation="horizontal"
                    android:paddingTop="50sp">
                    <EditText
                        android:id="@+id/editTextPrice5"
                        style="@style/EditTextStyle"
                        android:gravity="center"
                        android:hint="@string/editTextPricePlaceholder5"/>
                    <EditText
                        android:id="@+id/editTextWeight5"
                        style="@style/EditTextStyle"
                        android:gravity="center"
                        android:hint="@string/editTextWeightPlaceholder5"/>
                    <TextView
                        style="@style/EditTextStyle"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:id="@+id/textViewPricePerKg5"
                        android:hint="@string/textViewPricePerKg5"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- ====================== The version TextView ====================== -->
            <TextView
                android:id="@+id/textViewVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:hint="@string/textViewVersion"
                android:textSize="14sp"
                android:textColorHint="@color/versionColor"/>
        </TableLayout>
    </ScrollView>
</LinearLayout>

